# composition-th

./: cabal.project  mappable.cabal
src/Data/: Mappable.lhs
src/Data/Mappable/: TH.lhs
